kube/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: pipeline-orchestrator
spec:
  selector:
    app: pipeline-orchestrator
    component: orchestrator
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
