kube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pipeline-orchestrator
  labels:
    app: pipeline-orchestrator
spec:
  rules:
    - host: orchestrator.api.openquant.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pipeline-orchestrator
                port:
                  number: 8080
